plugins/kotlin/idea/tests/testData/gradle/hmppImportAndHighlighting/hmppLibAndConsumer/published-lib-consumer/src/iosMain/kotlin/UseLibActualizedExpect.kt.after
package com.h0tk3y.hmpp.klib.demo.app

import com.h0tk3y.hmpp.klib.demo.*

fun f() {
    LibCommonMainExpect().<!HIGHLIGHTING{Unix}("severity='ERROR'; descr='[UNRESOLVED_REFERENCE] Unresolved reference: additionalFunInIosActual'")!>additionalFunInIosActual<!>()
    useExpect(LibCommonMainExpect())
}
